--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
             display: grid;
             grid-template-columns: 1fr 1fr 1fr;
             margin-bottom: 20px;
+            transition: margin-top 1s;
+        }
+
+        nav:hover{
+            margin-top: 30px;
         }
 
         nav span{
